@@ -17,8 +17,7 @@ Global.DerivationTag: p1872
 cafe.Run:  JobBookeeping BuildTruthObjects(truthobjs)
 +cafe.Run: ZeroLeptonSR(sr) ZeroLeptonCRWT(crwt) ZeroLeptonCRWT(vrwt)
 +cafe.Run: ZeroLeptonCRZ(crz)
-
-#+cafe.Run: BuildTruthObjects(truthobjsy) ZeroLeptonCRZ(cry)
++cafe.Run: ZeroLeptonCRY(cry)
 
 cafe.Input: root://eosatlas.cern.ch//eos/atlas/user/c/conti/atlasreadable/datafiles/mc15_13TeV.361007.Pythia8EvtGen_A14NNPDF23LO_jetjet_JZ7.evgen.EVNT.e3569_tid04904951_00/DAOD_TRUTH1.DAOD.04904951._000779.pool.root
 cafe.Output: mytruth.root
@@ -86,10 +85,10 @@ crz.DerivationTag: %{Global.DerivationTag}
 
 # ---------------------------------------------------------
 
-truthobjsy.IsData: %{Global.IsData}
-truthobjsy.JetCollectionKey: %{Global.JetCollectionKey}
-truthobjsy.PhotonInOR: TRUE
-truthobjsy.suffix: cry
+#truthobjsy.IsData: %{Global.IsData}
+#truthobjsy.JetCollectionKey: %{Global.JetCollectionKey}
+#truthobjsy.PhotonInOR: TRUE
+#truthobjsy.suffix: cry
 
 # ---------------------------  CRY Region -----------------                                                                                                                                                                                                                 
 cry.IsData: %{Global.IsData}
@@ -98,4 +97,4 @@ cry.IsSignal: %{Global.IsSignal}
 cry.Period: %{Global.Period}
 cry.IsTruth: %{Global.IsTruth}
 cry.DerivationTag: %{Global.DerivationTag}
-cry.suffix: cry
+#cry.suffix: cry
