@@ -1,3 +1,9 @@
+04-May-2015 Geraldine Conti
+	* Added pt and eta cuts for photons for truth overlap removal procedure
+	* Fixed the call to OverlapRemoval from BuildSUSYObjs for the photon case by adding
+	a missing parameter
+	* Added b-tagging definition for truth jets
+
 30-Apr-2015 Geraldine Conti
 	* Added overlap removal procedure for truth analysis
 	* Added overlap removal for CRY incl. the photon (still buggy)
